# arak

./: .env.example  .gitignore  Cargo.toml  README.md  arak.example.toml  docker-compose.yaml
.github/workflows/: deploy-google.yaml  deploy.yaml  rust.yml
docker/: Dockerfile
kubernetes/: Makefile  README.md  values.yaml
kubernetes/config/: configmap.yaml  pod.yaml  secrets.yaml
src/: README.md  config.rs  database.rs  decoder.rs  event_visitor.rs  main.rs  sqlite.rs
src/database/: event_to_tables.rs  event_visitor.rs  keywords.rs  mod.rs  postgres.rs  sqlite.rs
src/database/sqlite/: keywords.rs  mod.rs
src/indexer/: adapter.rs  chain.rs  hook.rs  mod.rs
