[package]
name = "arak"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
ethrpc = { version = "0.0.7", features = ["http"] }
rusqlite = { version = "0.29", features = ["extra_check"] }
serde = { version = "1", features = ["derive"] }
solabi = { version = "0.1", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
futures = "0.3"
tokio-postgres = "0.7"
pg_bigdecimal = "0.1.5"
dotenv = "0.15.0"

[dev-dependencies]
hex-literal = "0.4"
whoami = { versio = "1.4", default-features = false }
